--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^6.22.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "typescript-eslint": "^8.27.0",
     "uuid": "^9.0.1",
     "zustand": "^5.0.3"
   },
