--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Server Configuration
-PORT=3000
-HOST=localhost
-FRONTEND_URL=http://localhost:5173
+PORT=3131
+HOST=0.0.0.0
+FRONTEND_URL=http://192.168.1.3:3030
 
 # Frontend Configuration
-VITE_PORT=5173
-VITE_HOST=localhost
-VITE_API_URL=http://localhost:3000
+VITE_PORT=3030
+VITE_HOST=192.168.1.3
+VITE_API_URL=http://192.168.1.3:3131
 
 # Supabase Configuration
 VITE_SUPABASE_URL=http://192.168.1.3:8282
@@ -18,9 +18,3 @@ OPENAI_API_KEY=sk-proj-Uf2rVD4cb07m8eMTJTfavKug3Ml0yxr_uTdEObghZku-ZNDVFhlf_RFLq
 # Development Settings
 VITE_DEV_ADMIN=movie@movie.com
 VITE_DEV_PASS=movie
-
-# Example configuration for different IP:
-# HOST=192.168.1.3
-# FRONTEND_URL=http://192.168.1.3:5173
-# VITE_HOST=192.168.1.3
-# VITE_API_URL=http://192.168.1.3:3000
