--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@remotion/media-utils": "^4.0.279",
     "@remotion/player": "^4.0.279",
     "@remotion/transitions": "^4.0.279",
+    "@runwayml/sdk": "^1.4.4",
     "@supabase/supabase-js": "^2.39.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -66,6 +67,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "supabase": "^2.20.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
