--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@remotion/transitions": "^4.0.279",
     "@runwayml/sdk": "^1.4.4",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
