--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@remotion/core": "^1.0.0-y.46",
     "@remotion/media-utils": "^4.0.279",
     "@remotion/player": "^4.0.279",
