--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "backend": "node backend/server.js"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
+    "pdf-lib": "^1.17.1",
+    "sharp": "^0.33.2",
     "@designcombo/events": "^1.0.2",
     "@designcombo/frames": "^0.0.3",
     "@designcombo/state": "^3.1.10",
@@ -28,6 +31,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.9",
