--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.28.0",
+    "openai": "^4.97.0",
     "pdf-lib": "^1.17.1",
-    "sharp": "^0.33.2"
+    "pdf2pic": "^3.1.4",
+    "sharp": "^0.33.5"
   }
 }
