--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "openai": "^4.97.0",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.1.4",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "uuid": "^11.1.0"
   }
 }
